# humanoidControl

./: humanoid changes.drawio  publisher.py  thetaLeft.csv  thetaRight.csv
src/: CalculoMhd.py  Controles.py  DerivadaJacobiano.py  DualQuaternionClass.py  LIMP.py  LQR3D.py  NAG.py  PublishZero.py  README.md  ResetPublisher.py  ResetSubscriber.py  SGD.py  SGDmomento.py  adagrad.py  caminhada.py  caminhada2.py  caminhadaCompleta.py  configGrafico.py  derivadaFU.py  derivadaFX.py  dualQuatConj.py  dualQuatDH.py  fase1.py  fase2.py  fase3.py  funcaoObjetivo.py  gaussian.py  getRotationDualQuat.py  git_commit_A.script  git_insert.script  git_insert_choose.script  git_insert_choose2.script  globalVariables.py  gradienteFuncao.py  imprimirConsole.py  jacobianoCinematica.py  jacobianoCoM.py  jacobianoPes.py  kinematicRobo.py  mainControle.py  (+25 more)
src/__pycache__/: primeiraDerivadaGradiente.py
